# embedding-benchmark

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  models-fastembed-gemma.toml  models-mistralrs-gemma.toml  models-test.toml  models.toml  run_full_benchmark.sh
docs/: chunking-comparison.md  public_embedding_benchmark_report.md
queries/: fastapi.json  ripgrep.json
src/: config.rs  lib.rs  main.rs  resource_monitor.rs
src/benchmark/: mod.rs  quality.rs
src/corpus/: bounded_chunker.rs  bounded_chunker_tests.rs  chunker.rs  loader.rs  mod.rs  semantic_chunker.rs
src/embedders/: fastembed_backend.rs  mistralrs_backend.rs  mod.rs  traits.rs
src/queries/: mod.rs
