[package]
name = "embedding-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark comparing fastembed vs mistral.rs embedding models"

# Keep this package independent from parent workspace
[workspace]

[dependencies]
# Embedding backends
fastembed = "5.2"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["metal"] }

# Vector database
lancedb = "0.22"
arrow = "55"
arrow-array = "55"
arrow-schema = "55"

# Resource monitoring
sysinfo = "0.32"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
async-trait = "0.1"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
comfy-table = "7.1"
statistical = "1.0"

# For ignore patterns
ignore = "0.4"

# Tree-sitter for AST-based chunking
# Note: All grammars must use compatible ABI versions
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Stack growth for deep recursion/large async state machines
stacker = "0.1"

# Random number generation for bootstrap
rand = "0.8"

[[bin]]
name = "embedding-benchmark"
path = "src/main.rs"

[lib]
name = "embedding_benchmark"
path = "src/lib.rs"
